Add reply and delete message
