# backend/routes/messageRoutes.js
@@ -3,12 +3,20 @@ const router = express.Router()
 import {
   getMessagesByDogId,
   createMessage,
+  deleteMessage,
+  replyMessage,
 } from '../controllers/messageController.js'
 import { protect, admin } from '../middleware/authMiddleware.js'
 
 router
   .route('/:dogId')
-  .get(protect, admin, getMessagesByDogId)
+  .get(getMessagesByDogId)
   .post(createMessage)
+router
+  .route('/reply/:messageId')
+  .post(protect, admin, replyMessage)
+router
+  .route('/:messageId/:index')
+  .delete(protect, admin, deleteMessage)
 
 export default router
